@@ -2,6 +2,9 @@
 Change log for datafield_template
 ========================================
 
+2019-10-30 (44)
+ - detect and reduce multilang SPANs in field values when processing FORMATHTML content
+
 2019-10-30 (43)
  - detect and reduce multilang SPANs in field descriptions when processing FORMATHTML content
 
